# vscode_qt_demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  resource.qrc  vscode_qt_demo.code-workspace
resource/qss/: label.qss
src/widgets/: video_widget.cpp  video_widget.h
src/windows/: mainwindow.cpp  mainwindow.h
